# InFound-Raw

./: .gitignore  LICENSE  README.md  main.py  parallel_batch_crawler.py  requirements.txt  requirements_api.txt
infound-backend-services/: .gitignore  Dockerfile  infound.portal.async.scheduler.pro.bat  infound.portal.async.scheduler.stg.bat  infound.portal.creator.open.api.pro.bat  infound.portal.creator.open.api.stg.bat  infound.portal.inner.open.api.pro.bat  infound.portal.inner.open.api.stg.bat  infound.portal.operation.open.api.pro.bat  infound.portal.operation.open.api.stg.bat  infound.portal.seller.open.api.dev.bat  infound.portal.seller.open.api.pro.bat  infound.portal.seller.open.api.stg.bat  infound.portal.seller.web.socket.dev.bat  infound.portal.seller.web.socket.pro.bat  infound.portal.seller.web.socket.stg.bat  main.py  pyproject.toml  readme.md
infound-backend-services/.run/: portal_creator_open_api.run.xml  portal_inner_open_api.run.xml
infound-backend-services/apps/portal_async_scheduler/: .dockerignore  Dockerfile  main.py  pyproject.toml
infound-backend-services/apps/portal_async_scheduler/core/: config.py
infound-backend-services/apps/portal_async_scheduler/scripts/: recover_invalid_running_task_plans.py
infound-backend-services/apps/portal_async_scheduler/services/: scheduler.py  seller_rpa_sample_monitor_plan_service.py  seller_rpa_scheduler_service.py
infound-backend-services/apps/portal_async_scheduler/tasks/: seller_rpa_scheduler_tasks.py  task_plan_sentinel.py
infound-backend-services/apps/portal_creator_open_api/: .dockerignore  Dockerfile  main.py  pyproject.toml  startup.py
infound-backend-services/apps/portal_creator_open_api/apis/: router.py
infound-backend-services/apps/portal_creator_open_api/configs/: base.yaml  dev.yaml  pro.yaml  stg.yaml
infound-backend-services/apps/portal_creator_open_api/core/: config.py  deps.py  token_manager.py
infound-backend-services/apps/portal_creator_open_api/middlewares/: auth_filter_middleware.py
infound-backend-services/apps/portal_creator_open_api/models/: entities.py
infound-backend-services/apps/portal_creator_open_api/services/: security.py
infound-backend-services/apps/portal_inner_open_api/: main.py  pyproject.toml  startup.py
infound-backend-services/apps/portal_inner_open_api/apis/: router.py
infound-backend-services/apps/portal_inner_open_api/configs/: base.yaml  pro.yaml
infound-backend-services/apps/portal_inner_open_api/core/: deps.py  rabbitmq_producer.py  token_manager.py
infound-backend-services/apps/portal_inner_open_api/middlewares/: auth_filter_middleware.py  request_filter_middleware.py
infound-backend-services/apps/portal_inner_open_api/models/: campaign.bak  campaign.py  chatbot.py  creator.py  outreach_creator.py  outreach_filter_items.py  outreach_task.py  sample.py
infound-backend-services/apps/portal_inner_open_api/references/: creator_filter_items_mx_mx_local_shop_20260330_000000_cn_en.json
infound-backend-services/apps/portal_inner_open_api/services/: __init__.py  campaign_ingestion_service.bak  campaign_ingestion_service.py  chatbot_message_builder.py  chatbot_schedule_publisher.py  chatbot_schedule_repository.py  (+7 more)
infound-backend-services/apps/portal_mq_consummers/: main.py  pyproject.toml
infound-backend-services/apps/portal_mqconsummers/: main.py  pyproject.toml
infound-backend-services/apps/portal_operation_open_api/: Dockerfile  main.py  pyproject.toml  startup.py
infound-backend-services/apps/portal_seller_open_api/: Dockerfile  app_constants.py  exceptions.py  main.py  pyproject.toml
infound-backend-services/apps/portal_seller_web_socket/: .dockerignore  Dockerfile  main.py  pyproject.toml
infound-backend-services/apps/portal_webhook_open_api/: main.py  pyproject.toml
infound-backend-services/backup/: .gitignore  Dockerfile  infound.portal.creator.open.api.pro.bat  infound.portal.creator.open.api.stg.bat  infound.portal.inner.open.api.pro.bat  infound.portal.inner.open.api.stg.bat  infound.portal.operation.open.api.pro.bat  infound.portal.operation.open.api.stg.bat  main.py  pyproject.toml  readme.md
infound-backend-services/backup/.run/: portal_creator_open_api.run.xml  portal_inner_open_api.run.xml  portal_operation_open_api.run.xml
infound-backend-services/backup/configs/: base.pro.yaml  base.stg.yaml  base.yaml  base_bak.yaml
infound-backend-services/common/: app_constants.py
infound-backend-services/common/core/: config.py  database.py  exceptions.py  logger.py  redis_client.py  response.py  startup.py
infound-backend-services/common/models/: infound.py
infound-backend-services/common/services/: rabbitmq_producer.py
infound-backend-services/configs/: base.yaml
infound-data-collection/: main.py  pyproject.toml  rabbitmq_connect_test.py  readme.md
infound-data-collection/apps/outreach_chatbot/: __init__.py  crawler_consumer.py
infound-data-collection/apps/portal_tiktok_campaign_crawler/: crawler_consumer.py
infound-data-collection/apps/portal_tiktok_creator_crawler/: crawler_consumer.py
infound-data-collection/apps/portal_tiktok_sample_crawler/: crawler_consumer.py
infound-data-collection/apps/portal_tiktok_shop_chatbot/: __init__.py  crawler_consumer.py
infound-data-collection/apps/portal_tiktok_shop_collection/: README.md  __init__.py  crawler_consumer.py
infound-data-collection/apps/portal_tiktok_shop_creator_crawler/: crawler_consumer.py
infound-data-collection/apps/sample_chatbot/: crawler_consumer.py
infound-data-collection/apps/unified_chatbot/: __init__.py  crawler_consumer.py
infound-data-collection/common/core/: config.py  database.py  exceptions.py  logger.py  response.py  startup.py
infound-data-collection/common/models/: all.py
infound-data-collection/common/mq/: connection.py  consumer_base.py
infound-data-collection/configs/: accounts.json  base.yaml
infound-data-collection/message_temp/: creator_full_crawler.py  email_code.py  sample_all.py  temp.txt
infound-data-collection/tools/: requeue_chatbot_dlq.py  send_chatbot_message.py  send_test_message.py
(+566 files in other folders)
