[project]
name = "infound-backend-services"
version = "0.1.0"
description = "INFound 后端服务集群"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "creators>=0.1.3",
    "pyjwt>=2.12.1",
]

[tool.uv.workspace]
members = [
    "packages/core_base",
    "packages/core_mq",
    "packages/core_redis",
    "packages/core_web",
    "packages/shared_infrastructure",
    "packages/shared_domain",
    "packages/shared_application_services",
    "apps/portal_creator_open_api",
    "apps/portal_inner_open_api",
    "apps/portal_operation_open_api",
    "apps/portal_webhook_open_api",
    "apps/portal_mqconsummers",
    "apps/portal_async_scheduler",
    "apps/portal_seller_open_api",
    "apps/portal_seller_web_socket",
    "packages/shared_seller_application_services",
    "apps/portal_mq_consummers",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
