[project]
name = "portal-creator-open-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "core-base",
    "core-mq",
    "core-redis",
    "core-web",
    "gunicorn>=25.1.0",
    "pyjwt>=2.11.0",
    "shared-application-services",
    "shared-domain",
    "shared-infrastructure",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv.sources]
shared-infrastructure = { workspace = true }
core-web = { workspace = true }
core-base = { workspace = true }
shared-application-services = { workspace = true }
shared-domain = { workspace = true }
core-mq = { workspace = true }
core-redis = { workspace = true }
