[project]
name = "portal-operation-open-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "core-base",
    "core-mq",
    "core-redis",
    "core-web",
    "gunicorn>=25.1.0",
    "shared-application-services",
    "shared-domain",
    "shared-infrastructure",
]

[tool.uv.sources]
core-base = { workspace = true }
core-web = { workspace = true }
core-mq = { workspace = true }
core-redis = { workspace = true }
shared-application-services = { workspace = true }
shared-domain = { workspace = true }
shared-infrastructure = { workspace = true }
